--- a/_data/conference_talks.yml
+++ b/_data/conference_talks.yml
@@ -1,6 +1,21 @@
 - authors: Bocong Zheng*, Yangyang Fu, Keliang Wang, Thomas Schuelke, Qi Hua Fan
+  title: Comparison of magnetron sputtering discharge characteristics operating in DC and RF modes a PIC/MCC simulation study
+  conf: AVS 67th International Symposium & Exhibition (AVS)
+  year: 2021
+
+- authors: Bocong Zheng*, Yangyang Fu, Huihui Wang, Keliang Wang, Thomas Schuelke, Qi Hua Fan
+  title: Electron heating transition in direct current magnetron sputtering discharges
+  conf: The 74th Annual Gaseous Electronics Conference (GEC)
+  year: 2021
+
+- authors: Bocong Zheng*, Yangyang Fu, Keliang Wang, Thomas Schuelke, Qi Hua Fan
+  title: Similarity of breathing oscillations in magnetron discharges
+  conf: The 48th IEEE International Conference on Plasma Science (ICOPS)
+  year: 2021
+
+- authors: Bocong Zheng*, Yangyang Fu, Keliang Wang, Thomas Schuelke, Qi Hua Fan
   title: <a href="https://bczheng.com/talks/Zheng21_SVC.pdf" target="_blank">One-dimensional PIC/MCC simulation of HiPIMS discharges</a>
-  conf: 64th Annual SVC Technical Conference
+  conf: 64th Annual SVC Technical Conference (SVC)
   year: 2021
 
 - authors: Bocong Zheng*, Yangyang Fu, Keliang Wang, Thomas Schuelke, Qi Hua Fan
