--- a/_data/invited_talks.yml
+++ b/_data/invited_talks.yml
@@ -1,1 +1,3 @@
 # - name: Georgia Institute of Technology, Computational Science & Engineering Seminar Series (2020)
+- name: Bocong Zheng†, Yangyang Fu, Keliang Wang, Thomas Schuelke, Qi Hua Fan, Kinetic investigation of electron heating in HiPIMS discharges, 48th International Conference On Metallurgical Coatings & Thin Films (ICMCTF), March 22-27, 2022.
+- name: Bocong Zheng†, Yangyang Fu, Keliang Wang, Thomas Schuelke, Qi Hua Fan, Electron dynamics in radio frequency magnetron argon discharges, International Online Plasma Seminar (IOPS, Online Virtual), August 5, 2021. (Invited Tutorial/Review, 45 min)
